test/files/neg/t10641.scala

// previously ignored
// progressed Wildcard import cannot be renamed
// now ';' expected but '=>' found.

import collection._ => `not a rename, just dross`


