test/files/neg/t10641.check
t10641.scala:6: error: ';' expected but '=>' found.
import collection._ => `not a rename, just dross`
                    ^
one error found
